--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="tabletop/src/tabletop.min.js"></script>
     <script>
         function init() {
             console.log('init');
@@ -18,6 +19,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <p>8:54</p>
+    <p>8:57</p>
 </body>
 </html>
