--- a/index.html
+++ b/index.html
@@ -38,22 +38,29 @@
     </section>
 
     <script>
-        // Fetch data from the Google Sheet for Bands
-        fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?output=csv')
-            .then(response => response.text())
-            .then(data => {
-                const bands = data.split('\n').map(row => row.split(','));
-                // Process and display bands data
-                const bandList = document.getElementById('band-list');
-                bands.forEach(band => {
-                    const listItem = document.createElement('li');
-                    listItem.textContent = `Band Name: ${band[0]}, Formation Year: ${band[1]}, Genre: ${band[2]}`;
-                    bandList.appendChild(listItem);
+        // Function to fetch and display data for a specific sheet
+        function fetchData(sheetName, listId) {
+            fetch(`https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/gviz/tq?tqx=out:csv&sheet=${sheetName}`)
+                .then(response => response.text())
+                .then(data => {
+                    const rows = data.split('\n').map(row => row.split(','));
+                    const list = document.getElementById(listId);
+                    rows.forEach(row => {
+                        const listItem = document.createElement('li');
+                        listItem.textContent = row.join(', '); // Display the row as a comma-separated string
+                        list.appendChild(listItem);
+                    });
+                })
+                .catch(error => {
+                    console.error(`Error fetching data for ${sheetName}:`, error);
                 });
-            });
+        }
 
-        // Repeat the same fetch process for Albums, Musicians, and Songs sheets
-        // Modify the code to parse and display data from each sheet accordingly
+        // Fetch and display data for each sheet
+        fetchData('Bands', 'band-list');
+        fetchData('Albums', 'album-list');
+        fetchData('Musicians', 'musician-list');
+        fetchData('Songs', 'song-list');
     </script>
 </body>
 </html>
