--- a/index.html
+++ b/index.html
@@ -8,59 +8,75 @@
 <body>
     <h1>Music Wiki</h1>
 
-    <!-- Create sections to display data -->
+    <!-- Create tables to display data -->
     <section id="bands">
         <h2>Bands</h2>
-        <ul id="band-list">
+        <table id="band-table">
             <!-- Band data will be displayed here -->
-        </ul>
+        </table>
     </section>
 
     <section id="albums">
         <h2>Albums</h2>
-        <ul id="album-list">
+        <table id="album-table">
             <!-- Album data will be displayed here -->
-        </ul>
+        </table>
     </section>
 
     <section id="musicians">
         <h2>Musicians</h2>
-        <ul id="musician-list">
+        <table id="musician-table">
             <!-- Musician data will be displayed here -->
-        </ul>
+        </table>
     </section>
 
     <section id="songs">
         <h2>Songs</h2>
-        <ul id="song-list">
+        <table id="song-table">
             <!-- Song data will be displayed here -->
-        </ul>
+        </table>
     </section>
 
     <script>
         // Function to fetch and display data for a specific sheet
-        function fetchData(sheetName, listId) {
-            fetch(`https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/gviz/tq?tqx=out:csv&sheet=${sheetName}`)
+        function fetchData(sheetURL, tableId) {
+            fetch(sheetURL)
                 .then(response => response.text())
                 .then(data => {
                     const rows = data.split('\n').map(row => row.split(','));
-                    const list = document.getElementById(listId);
-                    rows.forEach(row => {
-                        const listItem = document.createElement('li');
-                        listItem.textContent = row.join(', '); // Display the row as a comma-separated string
-                        list.appendChild(listItem);
+                    const table = document.getElementById(tableId);
+                    
+                    // Create the table headers
+                    const headerRow = document.createElement('tr');
+                    rows[0].forEach(header => {
+                        const th = document.createElement('th');
+                        th.textContent = header;
+                        headerRow.appendChild(th);
                     });
+                    table.appendChild(headerRow);
+                    
+                    // Populate the table with data
+                    for (let i = 1; i < rows.length; i++) {
+                        const rowData = rows[i];
+                        const row = document.createElement('tr');
+                        rowData.forEach(cellData => {
+                            const cell = document.createElement('td');
+                            cell.textContent = cellData;
+                            row.appendChild(cell);
+                        });
+                        table.appendChild(row);
+                    }
                 })
                 .catch(error => {
-                    console.error(`Error fetching data for ${sheetName}:`, error);
+                    console.error(`Error fetching data: ${error}`);
                 });
         }
 
         // Fetch and display data for each sheet
-        fetchData('Bands', 'band-list');
-        fetchData('Albums', 'album-list');
-        fetchData('Musicians', 'musician-list');
-        fetchData('Songs', 'song-list');
+        fetchData('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?gid=1612857784&single=true&output=csv', 'band-table');
+        fetchData('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?gid=275436655&single=true&output=csv', 'album-table');
+        fetchData('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?gid=648270528&single=true&output=csv', 'musician-table');
+        fetchData('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?gid=1752800700&single=true&output=csv', 'song-table');
     </script>
 </body>
 </html>
