--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Wiki v4</title>
+    <title>Music Wiki v5</title>
 </head>
 <body>
-    <h1>Music Wiki</h1>
+    <h1>Music Wiki v5</h1>
 
     <!-- Create tables to display data -->
     <section id="bands">
@@ -73,6 +73,7 @@
                                 });
                                 cell.appendChild(itemList);
                             } else {
+                            	console.log(cellData);
                                 cell.textContent = cellData;
                             }
                             row.appendChild(cell);
