--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     // Populate the table with data
                     for (let i = 1; i < rows.length; i++) {
                         const rowData = rows[i];
+                        console.log(rowData);
                         const row = document.createElement('tr');
                         rowData.forEach(cellData => {
                             const cell = document.createElement('td');
