--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Wiki v6</title> <!-- Updated version number to v6 -->
+    <title>Music Wiki v7</title> <!-- Updated version number to v7 -->
 </head>
 <body>
-    <h1>Music Wiki v6</h1> <!-- Updated version number to v6 -->
+    <h1>Music Wiki v7</h1> <!-- Updated version number to v7 -->
 
     <!-- Create tables to display data -->
     <section id="bands">
@@ -58,11 +58,25 @@
                     // Populate the table with data
                     for (let i = 1; i < rows.length; i++) {
                         const rowData = rows[i];
-                        console.log(rowData);
                         const row = document.createElement('tr');
-                        rowData.forEach(cellData => {
+                        rowData.forEach((cellData, index) => {
                             const cell = document.createElement('td');
-                            cell.textContent = cellData;
+                            if ((headerRow.textContent.includes('Track List') && index === headerRow.textContent.indexOf('Track List')) ||
+                                (headerRow.textContent.includes('Instruments') && index === headerRow.textContent.indexOf('Instruments')) ||
+                                (headerRow.textContent.includes('Musician(s)') && index === headerRow.textContent.indexOf('Musician(s)'))) {
+                                // Handle columns with multiple values
+                                const values = cellData.split('"').filter(item => item.trim() !== ',' && item.trim() !== '');
+                                const ul = document.createElement('ul');
+                                values.forEach(value => {
+                                    const li = document.createElement('li');
+                                    li.textContent = value.trim();
+                                    ul.appendChild(li);
+                                });
+                                cell.appendChild(ul);
+                            } else {
+                                // Display other cells as is
+                                cell.textContent = cellData;
+                            }
                             row.appendChild(cell);
                         });
                         table.appendChild(row);
