--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Wiki v10</title> <!-- Updated version number to v10 -->
+    <title>Music Wiki v10a</title> <!-- Updated version number to v10 -->
 </head>
 <body>
-    <h1>Music Wiki v10</h1> <!-- Updated version number to v10 -->
+    <h1>Music Wiki v10a</h1> <!-- Updated version number to v10 -->
 
     <!-- Create tables to display data -->
     <section id="bands">
