--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Wiki v11</title> <!-- Updated version number to v11 -->
+    <title>Music Wiki v13</title> <!-- Updated version number to v13 -->
 </head>
 <body>
-    <h1>Music Wiki v11</h1> <!-- Updated version number to v11 -->
+    <h1>Music Wiki v13</h1> <!-- Updated version number to v13 -->
 
     <!-- Create tables to display data -->
     <section id="bands">
@@ -62,7 +62,7 @@
                         rowData.forEach((cellData, index) => {
                             const cell = document.createElement('td');
                             // Handle columns with multiple values
-                            if (headerRow.children[index].textContent.includes(',')) {
+                            if (rowData[0].includes(',')) {
                                 const values = cellData.split(',').map(value => value.trim());
                                 const ul = document.createElement('ul');
                                 values.forEach(value => {
