--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Wiki v12</title> <!-- Updated version number to v13 -->
+    <title>Music Wiki v16</title> <!-- Updated version number to v16 -->
 </head>
 <body>
-    <h1>Music Wiki v12</h1> <!-- Updated version number to v13 -->
+    <h1>Music Wiki v16</h1> <!-- Updated version number to v16 -->
 
     <!-- Create tables to display data -->
     <section id="bands">
@@ -38,58 +38,56 @@
     </section>
 
     <script>
-        // Function to fetch and display data for a specific sheet
-        function fetchData(sheetURL, tableId) {
-            fetch(sheetURL)
+        // Create an object to store musician-band associations
+        const musicianBands = {};
+
+        // Function to parse Songs data and populate musicianBands object
+        function parseSongsData() {
+            fetch('URL_TO_SONGS_SHEET_TSV_FILE') // Replace with the actual URL
                 .then(response => response.text())
                 .then(data => {
-                    const rows = data.split('\n').map(row => row.split('\t')); // Use '\t' as the delimiter for TSV
-                    const table = document.getElementById(tableId);
-                    
-                    // Create the table headers
-                    const headerRow = document.createElement('tr');
-                    rows[0].forEach(header => {
-                        const th = document.createElement('th');
-                        th.textContent = header;
-                        headerRow.appendChild(th);
-                    });
-                    table.appendChild(headerRow);
-                    
-                    // Populate the table with data
+                    const rows = data.split('\n').map(row => row.split('\t'));
+
                     for (let i = 1; i < rows.length; i++) {
-                        const rowData = rows[i];
-                        const row = document.createElement('tr');
-                        rowData.forEach((cellData, index) => {
-                            const cell = document.createElement('td');
-                            // Handle columns with multiple values
-                            if (cellData.includes(',')) {
-                                const values = cellData.split(',').map(value => value.trim());
-                                const ul = document.createElement('ul');
-                                values.forEach(value => {
-                                    const li = document.createElement('li');
-                                    li.textContent = value;
-                                    ul.appendChild(li);
-                                });
-                                cell.appendChild(ul);
-                            } else {
-                                // Display other cells as is
-                                cell.textContent = cellData;
+                        const songData = rows[i];
+                        const songMusicians = songData[3].split(',').map(musician => musician.trim()); // Assuming musician names are in the 4th column (index 3)
+
+                        // Update the musicianBands object
+                        songMusicians.forEach(musician => {
+                            if (!musicianBands[musician]) {
+                                musicianBands[musician] = [];
                             }
-                            row.appendChild(cell);
+                            if (!musicianBands[musician].includes(songData[2])) { // Assuming band names are in the 3rd column (index 2)
+                                musicianBands[musician].push(songData[2]);
+                            }
                         });
-                        table.appendChild(row);
                     }
+
+                    // Once data is parsed, update the Musicians table
+                    updateMusiciansTable();
                 })
                 .catch(error => {
-                    console.error(`Error fetching data: ${error}`);
+                    console.error(`Error fetching Songs data: ${error}`);
                 });
         }
 
-        // Fetch and display data for each sheet
-        fetchData('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?gid=1612857784&single=true&output=tsv', 'band-table');
-        fetchData('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?gid=275436655&single=true&output=tsv', 'album-table');
-        fetchData('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?gid=648270528&single=true&output=tsv', 'musician-table');
-        fetchData('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?gid=1752800700&single=true&output=tsv', 'song-table');
+        // Function to update the Musicians table with associated bands
+        function updateMusiciansTable() {
+            const musicianTable = document.getElementById('musician-table'); // Replace with your table ID
+            const musicianRows = musicianTable.querySelectorAll('tr');
+
+            // Iterate through musician rows and update associated bands
+            musicianRows.forEach(row => {
+                const musicianName = row.querySelector('td:first-child').textContent; // Assuming musician names are in the first column
+                if (musicianBands[musicianName]) {
+                    const bandsCell = row.querySelector('td:nth-child(2)'); // Assuming bands are displayed in the second column
+                    bandsCell.textContent = musicianBands[musicianName].join(', ');
+                }
+            });
+        }
+
+        // Call the function to parse Songs data and update Musicians table
+        parseSongsData();
     </script>
 </body>
 </html>
