--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Wiki v16</title> <!-- Updated version number to v16 -->
+    <title>Music Wiki v16a</title> <!-- Updated version number to v16 -->
 </head>
 <body>
-    <h1>Music Wiki v16</h1> <!-- Updated version number to v16 -->
+    <h1>Music Wiki v16a</h1> <!-- Updated version number to v16 -->
 
     <!-- Create tables to display data -->
     <section id="bands">
@@ -38,12 +38,56 @@
     </section>
 
     <script>
-        // Create an object to store musician-band associations
-        const musicianBands = {};
+        // Function to fetch and display data for a specific sheet
+        function fetchData(sheetURL, tableId) {
+            fetch(sheetURL)
+                .then(response => response.text())
+                .then(data => {
+                    const rows = data.split('\n').map(row => row.split('\t')); // Use '\t' as the delimiter for TSV
+                    const table = document.getElementById(tableId);
+                    
+                    // Create the table headers
+                    const headerRow = document.createElement('tr');
+                    rows[0].forEach(header => {
+                        const th = document.createElement('th');
+                        th.textContent = header;
+                        headerRow.appendChild(th);
+                    });
+                    table.appendChild(headerRow);
+                    
+                    // Populate the table with data
+                    for (let i = 1; i < rows.length; i++) {
+                        const rowData = rows[i];
+                        const row = document.createElement('tr');
+                        rowData.forEach((cellData, index) => {
+                            const cell = document.createElement('td');
+                            // Handle columns with multiple values
+                            if (rowData[0].includes(',')) {
+                                const values = cellData.split(',').map(value => value.trim());
+                                const ul = document.createElement('ul');
+                                values.forEach(value => {
+                                    const li = document.createElement('li');
+                                    li.textContent = value;
+                                    ul.appendChild(li);
+                                });
+                                cell.appendChild(ul);
+                            } else {
+                                // Display other cells as is
+                                cell.textContent = cellData;
+                            }
+                            row.appendChild(cell);
+                        });
+                        table.appendChild(row);
+                    }
+                })
+                .catch(error => {
+                    console.error(`Error fetching data: ${error}`);
+                });
+        }
 
         // Function to parse Songs data and populate musicianBands object
         function parseSongsData() {
-            fetch('URL_TO_SONGS_SHEET_TSV_FILE') // Replace with the actual URL
+            fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?gid=1752800700&single=true&output=tsv')
                 .then(response => response.text())
                 .then(data => {
                     const rows = data.split('\n').map(row => row.split('\t'));
@@ -88,6 +132,12 @@
 
         // Call the function to parse Songs data and update Musicians table
         parseSongsData();
+
+        // Fetch and display data for each sheet
+        fetchData('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?gid=1612857784&single=true&output=tsv', 'band-table');
+        fetchData('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?gid=275436655&single=true&output=tsv', 'album-table');
+        fetchData('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?gid=648270528&single=true&output=tsv', 'musician-table');
+        fetchData('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?gid=1752800700&single=true&output=tsv', 'song-table');
     </script>
 </body>
 </html>
