--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Wiki v16</title> <!-- Updated version number to v16 -->
+    <title>Music Wiki v16b</title> <!-- Updated version number to v16 -->
 </head>
 <body>
-    <h1>Music Wiki v16</h1> <!-- Updated version number to v16 -->
+    <h1>Music Wiki v16b</h1> <!-- Updated version number to v16 -->
 
     <!-- Create tables to display data -->
     <section id="bands">
@@ -38,6 +38,9 @@
     </section>
 
     <script>
+        // Define the musicianBands object to store associated bands
+        const musicianBands = {};
+
         // Function to fetch and display data for a specific sheet
         function fetchData(sheetURL, tableId) {
             fetch(sheetURL)
