--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Wiki v16b</title> <!-- Updated version number to v16 -->
+    <title>Music Wiki v17</title> <!-- Updated version number to v17 -->
 </head>
 <body>
-    <h1>Music Wiki v16b</h1> <!-- Updated version number to v16 -->
+    <h1>Music Wiki v17</h1> <!-- Updated version number to v17 -->
 
     <!-- Create tables to display data -->
     <section id="bands">
@@ -38,9 +38,6 @@
     </section>
 
     <script>
-        // Define the musicianBands object to store associated bands
-        const musicianBands = {};
-
         // Function to fetch and display data for a specific sheet
         function fetchData(sheetURL, tableId) {
             fetch(sheetURL)
@@ -94,6 +91,7 @@
                 .then(response => response.text())
                 .then(data => {
                     const rows = data.split('\n').map(row => row.split('\t'));
+                    const musicianBands = {}; // Create a new object to store associated bands
 
                     for (let i = 1; i < rows.length; i++) {
                         const songData = rows[i];
@@ -111,7 +109,7 @@
                     }
 
                     // Once data is parsed, update the Musicians table
-                    updateMusiciansTable();
+                    updateMusiciansTable(musicianBands);
                 })
                 .catch(error => {
                     console.error(`Error fetching Songs data: ${error}`);
@@ -119,7 +117,7 @@
         }
 
         // Function to update the Musicians table with associated bands
-        function updateMusiciansTable() {
+        function updateMusiciansTable(musicianBands) {
             const musicianTable = document.getElementById('musician-table'); // Replace with your table ID
             const musicianRows = musicianTable.querySelectorAll('tr');
 
