--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Wiki v0b</title> 
+    <title>Music Wiki v0c</title> 
 </head>
 <body>
-    <h1>Music Wiki v0b</h1> 
+    <h1>Music Wiki v0c</h1> 
 
     <section id="songs">
         <h2>Songs</h2>
@@ -16,7 +16,21 @@
     </section>
 
     <script>
+        // Define the Song class
+        class Song {
+            constructor(data) {
+                this.band = data["Band"];
+                this.album = data["Album"];
+                this.year = data["Year"];
+                this.songTitle = data["Song Title"];
+                this.lyrics = data["Lyrics"];
+                this.music = data["Music"];
+                this.performers = data["Performers"];
+            }
+        }
+
         const songLibrary = [];
+
         // Function to fetch and display data for a specific sheet
         function fetchData(sheetURL, tableId) {
             fetch(sheetURL)
@@ -24,61 +38,36 @@
                 .then(data => {
                     const rows = data.split('\n').map(row => row.split('\t')); // Use '\t' as the delimiter for TSV
                     const table = document.getElementById(tableId);
-                    
+
                     // Create the table headers
-                    const headerRow = document.createElement('tr');
-                    rows[0].forEach(header => {
-                        const th = document.createElement('th');
-                        th.textContent = header;
-                        headerRow.appendChild(th);
+                    const headerRow = rows[0];
+                    const headerCells = headerRow.map(header => {
+                        return header.trim(); // Remove leading/trailing spaces
                     });
-                    table.appendChild(headerRow);
-                    
-                    // Populate the table with data
+
+                    // Populate the table with data and add Song instances to songLibrary
                     for (let i = 1; i < rows.length; i++) {
                         const rowData = rows[i];
-                        const row = document.createElement('tr');
+                        const songData = {};
                         rowData.forEach((cellData, index) => {
-                            const cell = document.createElement('td');
-                            // Handle columns with multiple values
-                            if (cellData.includes(',')) {
-                                const values = cellData.split(',').map(value => value.trim());
-                                const ul = document.createElement('ul');
-                                values.forEach(value => {
-                                    console.log(value);
-                                    const li = document.createElement('li');
-                                    li.textContent = value;
-                                    ul.appendChild(li);
-                                });
-                                cell.appendChild(ul);
-                            } else if (cellData.includes(';')) {
-                                const values = cellData.split(';').map(value => value.trim());
-                                const ul = document.createElement('ul');
-                                values.forEach(value => {
-                                    console.log(value);
-                                    const li = document.createElement('li');
-                                    li.textContent = value;
-                                    ul.appendChild(li);
-                                });
-                                cell.appendChild(ul);
-                            } else {
-                                // Display other cells as is
-                                cell.textContent = cellData;
-                            }
-                            row.appendChild(cell);
+                            const header = headerCells[index];
+                            songData[header] = cellData;
                         });
-                        table.appendChild(row);
+
+                        // Create a Song instance and add it to songLibrary
+                        const song = new Song(songData);
+                        songLibrary.push(song);
                     }
+
+                    // ... Rest of your table rendering code ...
                 })
                 .catch(error => {
                     console.error(`Error fetching data: ${error}`);
                 });
-                console.log(songLibrary);
         }
 
         // Fetch and display data for each sheet
         fetchData('https://docs.google.com/spreadsheets/d/e/2PACX-1vRoQplxGdN6jkWTPCmTecWOB5ldiViAYv8MhKYUYOnt5x2Cvn3J-OpS7dSr8aIcJo0euDy7Ai0DSPzm/pub?gid=1752800700&single=true&output=tsv', 'song-table');
-        console.log(songLibrary);
     </script>
 </body>
 </html>
