--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Wiki v0f</title> 
+    <title>Music Wiki v0g</title> 
 </head>
 <body>
-    <h1>Music Wiki v0f</h1> 
+    <h1>Music Wiki v0g</h1> 
 
     <section id="songs">
         <h2>Songs</h2>
@@ -86,9 +86,9 @@
                     // Log songLibrary for inspection
                     console.log(songLibrary);
                 })
-                .catch(error => {
-                    console.error(`Error fetching data: ${error}`);
-                });
+                // .catch(error => {
+                //     console.error(`Error fetching data: ${error}`);
+                // });
         }
 
         // Fetch and display data for each sheet
